# py_ctln

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/py-ctln/: CTLN.py  __init__.py  collections.py  known_networks.py
src/py_ctln/: __init__.py
src/py_ctln/known_network_data/: all_1.pkl  all_2.pkl  all_3.pkl  all_4.pkl  all_5.pkl  core_3.pkl  core_4.pkl  core_5.pkl  core_6.pkl  n3_digraphs.mat
tests/: test_ctlns.py
